shrink font to avoid wrap with 2-digit w/l

--- a/src/components/Rankings/TeamCell.scss
+++ b/src/components/Rankings/TeamCell.scss
@@ -4,7 +4,7 @@
   align-items: center;
   width: 12rem;
   padding: 0 2rem;
-  font-size: 2rem;
+  font-size: 1.8rem;
   line-height: 1.3;
 
   @media (max-width: 1200px) {
